<resources>
    <string name="app_name">mChama</string>
    <string name="new_here">New Here ?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="please_sign_in_with_your_account_details_below">Please sign in with your account details below</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_up">Sign Up</string>

    <integer-array name="img_id_arr">
        <item>@drawable/ic_loans</item>
        <item>@drawable/ic_savings</item>
        <item>@drawable/ic_transactions</item>
    </integer-array>

    <string-array name="repayment_period">
        <item>1 month</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>12 months</item>
        <item>18 months</item>
        <item>24 months</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="loans">Loans</string>
    <string name="transactions">Transactions</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="deposit_money">Deposit Money</string>
    <string name="current_balance">Current Balance</string>
    <string name="mwallet_0_00">mWallet: 0.00</string>
    <string name="hello">Hello</string>
    <string name="logout">Logout</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="m_pesa_phone">M-Pesa Phone:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="update_profile_details">Update profile Details</string>
    <string name="rotation_list">Rotation List</string>
    <string name="e_g_254722334455">e.g 254722334455</string>
    <string name="amount_min_100_kes">Amount (min. 100 KES)</string>
    <string name="submit">SUBMIT</string>
    <string name="please_enter_you_phone_number_and_the_amount_you_wish_to_deposit_to_service_your_loan">Please enter you Phone number and the amount you wish to deposit to service your loan</string>
    <string name="send">SEND</string>
    <string name="current_loan_balance">Current Loan Balance</string>
    <string name="please_enter_you_phone_number_and_the_amount_you_wish_to_deposit">Please enter you Phone number and the amount you wish to deposit</string>
    <string name="date">Date</string>
    <string name="dd_mm_yyyy">yyyy/mm/dd</string>
    <string name="repayment_period">Repayment period:</string>
    <string name="min_1000_kes">min. 1000 KES</string>


</resources>