<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    tools:context=".LoanService">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="Service Loan"
        android:textSize="45sp"
        android:fontFamily="@font/adobe_garamond_pro_bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/balanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:text="@string/current_loan_balance"
            android:fontFamily="@font/adobe_garamond_pro_regular"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/current_loan_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adobe_garamond_pro_bold"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="000"
            android:paddingTop="10dp"
            android:textColor="#000000"
            android:textSize="40sp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/please_enter_you_phone_number_and_the_amount_you_wish_to_deposit_to_service_your_loan"
        android:textSize="15sp"
        android:fontFamily="@font/adobe_garamond_pro_regular"/>

    <TextView
        android:id="@+id/phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="20dp"
        android:text="@string/m_pesa_phone"
        android:textSize="15sp"
        android:paddingTop="20dp"
        android:fontFamily="@font/adobe_garamond_pro_bold"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="35dp" />


    <EditText
        android:id="@+id/loan_service_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/e_g_254722334455"
        android:inputType="phone"
        android:fontFamily="@font/adobe_garamond_pro_regular"
        android:background="@drawable/custom_input"
        android:padding="15dp"
        />

    <EditText
        android:id="@+id/loan_service_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/amount_min_100_kes"
        android:inputType="number"
        android:fontFamily="@font/adobe_garamond_pro_regular"
        android:background="@drawable/custom_input"
        android:padding="15dp"
        />


    <Button
        android:id="@+id/loan_service_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/send"
        android:fontFamily="@font/adobe_garamond_pro_regular"
        android:background="@drawable/button"
        android:textColor="#ffffff"


        />

    <LinearLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        />


</LinearLayout>