<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    tools:context=".Login">



        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:text="@string/welcome_back"
            android:textSize="45sp"
            android:fontFamily="@font/adobe_garamond_pro_bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/please_sign_in_with_your_account_details_below"
            android:textSize="15sp"
            android:fontFamily="@font/adobe_garamond_pro_regular"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/adobe_garamond_pro_regular"
            android:background="@drawable/custom_input"
            android:padding="15dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:fontFamily="@font/adobe_garamond_pro_regular"
            android:background="@drawable/custom_input"
            android:padding="15dp"
            />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/adobe_garamond_pro_regular"
        android:onClick="goToForgotPassword"

        />



    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/sign_in"
        android:fontFamily="@font/adobe_garamond_pro_regular"
        android:background="@drawable/button"
        android:textColor="#ffffff"


        />


    <LinearLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No account? "
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/adobe_garamond_pro_regular"
        />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/adobe_garamond_pro_regular"
        android:text="@string/sign_up"
        android:textColor="@color/color1"
        android:textSize="20sp"
        android:onClick="signup"/>

    </LinearLayout>






</LinearLayout>